compiler/tests/en/errors/incdec_immutable.salam
// EXPECT: E013
func main:
    x : int = 5
    x++
end
